syntax = "proto3";

package stores.v1;

option go_package = "github.com/tekam03/panierquebec-backend/gen/stores/v1;storesv1";

// Service definition
service MerchantService {
  rpc GetAllMerchants (GetAllMerchantsRequest) returns (GetAllMerchantsResponse);
  rpc GetMerchantByID (GetMerchantByIDRequest) returns (GetMerchantByIDResponse);
  rpc CreateMerchant (CreateMerchantRequest) returns (CreateMerchantResponse);
  rpc DeleteMerchant (DeleteMerchantRequest) returns (DeleteMerchantResponse);
  rpc UpdateMerchant (UpdateMerchantRequest) returns (UpdateMerchantResponse);
}

// Messages

message StoreMerchant {
  int32 id = 1;
  string name = 2;
  string url = 3;
}

message GetAllMerchantsRequest {}

message GetAllMerchantsResponse {
  repeated StoreMerchant merchants = 1;
}

message GetMerchantByIDRequest {
  int32 id = 1;
}

message GetMerchantByIDResponse {
  StoreMerchant merchant = 1;
}

message CreateMerchantRequest {
  string name = 1;
  string url = 2;
}

message CreateMerchantResponse {
  int32 id = 1;
}

message DeleteMerchantRequest {
  int32 id = 1;
}

message DeleteMerchantResponse {
  bool success = 1;
}

message UpdateMerchantRequest {
  int32 id = 1;
  StoreMerchant merchant = 2;
}
